--- a/MenuSample/app/src/main/res/values/strings.xml
+++ b/MenuSample/app/src/main/res/values/strings.xml
@@ -10,6 +10,7 @@ res/values/string.xmlファイル
 -->
 <resources>
 	<string name="app_name">メニューサンプル</string>
+	<string name="tv_menu_unit">円</string>
 	<string name="menu_list_options_teishoku">定食</string>
 	<string name="menu_list_options_curry">カレー</string>
 	<string name="menu_list_context_desc">説明を表示</string>
