第10章「データベースサンプル」を1画面のものに作り直し。

--- a/DatabaseSample/app/src/main/res/values/strings.xml
+++ b/DatabaseSample/app/src/main/res/values/strings.xml
@@ -19,9 +19,8 @@ res/values/string.xmlファイル
 		<item>ミシシッピミュール</item>
 		<item>ブルーハワイ</item>
 	</string-array>
-	<string name="tv_navi">カクテルの評価と感想を入力してください。</string>
-	<string name="tv_name">選択されたカクテル:</string>
-	<string name="tv_rate">評価:</string>
-	<string name="tv_note">感想:</string>
-	<string name="menu_save">保存</string>
+	<string name="tv_lb_name">選択されたカクテル:</string>
+	<string name="tv_name">未選択</string>
+	<string name="tv_lb_note">感想:</string>
+	<string name="btn_save">保存</string>
 </resources>
