--- a/ServiceSample/app/src/main/res/values/strings.xml
+++ b/ServiceSample/app/src/main/res/values/strings.xml
@@ -16,4 +16,5 @@ res/values/string.xmlファイル
 	<string name="msg_notification_text_start">音声ファイルの再生を開始しました</string>
 	<string name="msg_notification_title_finish">再生終了</string>
 	<string name="msg_notification_text_finish">音声ファイルの再生が終了しました</string>
+	<string name="notification_channel_name">サービスサンプル通知</string>
 </resources>
