--- a/LifeCycleSample/app/src/main/res/values/strings.xml
+++ b/LifeCycleSample/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-CodeZine
-Android Studio 2で始めるアプリ開発入門
+『Androidアプリ開発の教科書』
+第7章
 ライフサイクルサンプル
 
 @author Shinzo SAITO
@@ -9,9 +9,7 @@ Android Studio 2で始めるアプリ開発入門
 res/values/string.xmlファイル
 -->
 <resources>
-
 	<string name="app_name">ライフサイクルサンプル</string>
 	<string name="bt_next">次の画面を表示</string>
 	<string name="bt_precious">前の画面を表示</string>
-
 </resources>
