--- a/LifeCycleSample/app/src/main/res/values/strings.xml
+++ b/LifeCycleSample/app/src/main/res/values/strings.xml
@@ -11,5 +11,5 @@ res/values/string.xmlファイル
 <resources>
 	<string name="app_name">ライフサイクルサンプル</string>
 	<string name="bt_next">次の画面を表示</string>
-	<string name="bt_precious">前の画面を表示</string>
+	<string name="bt_previous">前の画面を表示</string>
 </resources>
