第3章「画面部品サンプル」を第2版に合わせて改変。

--- a/ViewSample/app/src/main/res/values/strings.xml
+++ b/ViewSample/app/src/main/res/values/strings.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <!--
 『Androidアプリ開発の教科書』
 第3章
@@ -33,5 +32,7 @@ res/values/string.xmlファイル
 		<item>マンハッタン</item>
 		<item>ミシシッピミュール</item>
 		<item>ブルーハワイ</item>
+		<item>マイタイ</item>
+		<item>マティーニ</item>
 	</string-array>
 </resources>
