--- a/DatabaseSample/app/src/main/res/values/strings.xml
+++ b/DatabaseSample/app/src/main/res/values/strings.xml
@@ -17,6 +17,8 @@ res/values/string.xmlファイル
 		<item>マンハッタン</item>
 		<item>ミシシッピミュール</item>
 		<item>ブルーハワイ</item>
+		<item>マイタイ</item>
+		<item>マティーニ</item>
 	</string-array>
 	<string name="tv_lb_name">選択されたカクテル:</string>
 	<string name="tv_name">未選択</string>
