--- a/FragmentSample/app/src/main/res/values/strings.xml
+++ b/FragmentSample/app/src/main/res/values/strings.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <!--
 『Androidアプリ開発の教科書』
 第9章
@@ -13,4 +12,6 @@ res/values/string.xmlファイル
 	<string name="tv_thx_title">注文完了</string>
 	<string name="tv_thx_desc">以下のメニューのご注文を受け付けました。\nご注文ありがとうございます。</string>
 	<string name="bt_thx_back">リストに戻る</string>
+	<!-- TODO: Remove or change this placeholder text -->
+	<string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
