--- a/ListViewSample/app/src/main/res/values/strings.xml
+++ b/ListViewSample/app/src/main/res/values/strings.xml
@@ -19,6 +19,9 @@ res/values/string.xmlファイル
 		<item>ミンチかつ定食</item>
 		<item>チキンカツ定食</item>
 		<item>コロッケ定食</item>
+		<item>回鍋肉定食</item>
+		<item>麻婆豆腐定食</item>
+		<item>青椒肉絲定食</item>
 		<item>焼き魚定食</item>
 		<item>焼肉定食</item>
 	</string-array>
