--- a/MediaSample/app/src/main/res/values/strings.xml
+++ b/MediaSample/app/src/main/res/values/strings.xml
@@ -13,5 +13,5 @@ res/values/string.xmlファイル
 	<string name="bt_play_pause">一時停止</string>
 	<string name="bt_back">&lt;&lt;</string>
 	<string name="bt_forward">&gt;&gt;</string>
-	<string name="tv_loop">リピート再生</string>
+	<string name="sw_loop">リピート再生</string>
 </resources>
