第3章「画面部品サンプル」を第3版初校に合わせて改変。

--- a/ViewSample/app/src/main/res/values/strings.xml
+++ b/ViewSample/app/src/main/res/values/strings.xml
@@ -34,5 +34,7 @@ res/values/string.xmlファイル
 		<item>ブルーハワイ</item>
 		<item>マイタイ</item>
 		<item>マティーニ</item>
+		<item>ブルームーン</item>
+		<item>モヒート</item>
 	</string-array>
 </resources>
