第5章「リスト選択サンプル」を第3版初版に合わせて改変。

--- a/ListViewSample/app/src/main/res/values/strings.xml
+++ b/ListViewSample/app/src/main/res/values/strings.xml
@@ -24,6 +24,8 @@ res/values/string.xmlファイル
 		<item>青椒肉絲定食</item>
 		<item>八宝菜定食</item>
 		<item>酢豚定食</item>
+		<item>豚の角煮定食</item>
+		<item>焼き鳥定食</item>
 		<item>焼き魚定食</item>
 		<item>焼肉定食</item>
 	</string-array>
